RESOLVED FIXED106225
[BlackBerry] Never avoid blitting when one-shot drawing sync is involved.
https://bugs.webkit.org/show_bug.cgi?id=106225
Summary [BlackBerry] Never avoid blitting when one-shot drawing sync is involved.
Jakob Petsovits
Reported 2013-01-07 09:31:14 PST
didRenderContent() has a mechanism to avoid double blits;when scrolling or zooming is enabled then we don't issue blitContents() as the client would (continually) do thatalready.However, since r138024, didRenderContents() also deals with one-shot drawing synchronization and commits. When these are required, we can't just skip out or the backingstore and overlaying composited layers are likely to get out of sync. The condition also doesn't make much sense for direct rendering as no blit calls are issued at all when it is enabled.Fix the issue by limiting the impact of the scroll/zoom early return to only regular blit operations. Patch below. Based on a patch and analysis by Chris Guan. Bug also known as RIM PR 274948.
Attachments
Patch (2.52 KB, patch)
2013-01-07 09:51 PST, Jakob Petsovits
no flags
Jakob Petsovits
Comment 1 2013-01-07 09:51:07 PST
WebKit Review Bot
Comment 2 2013-01-07 10:30:30 PST
Comment on attachment 181515 [details] Patch Clearing flags on attachment: 181515 Committed r138956: <http://trac.webkit.org/changeset/138956>
WebKit Review Bot
Comment 3 2013-01-07 10:30:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.